--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>Barbearia Alura
 </head>
 <body>
-    
+    <h1>Sobre a Barbearia Alura</h1>
+    <p>Localização no coração da cidade a barbearia Alura traz para o mercado o que há de melhor para o seu cabelo e barba. Fundado em 2019,a barbearia Alura já é  destaque na cidade e conquista novos clientes a cada dia.</p>
 </body>
 </html>
