--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>Sobre a Barbearia Alura</h1>
-    <p>Localização no coração da cidade a barbearia Alura traz para o mercado o que há de melhor para o seu cabelo e barba. Fundado em 2019,a barbearia Alura já é  destaque na cidade e conquista novos clientes a cada dia.</p>
+    <p>Localização no coração da cidade <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundado em 2019,a barbearia  Alura já é  destaque na cidade e conquista novos clientes a cada dia.</p>
+<P><em>"Nossa Missão é: Proporcionar auto-estima e qualidade de vida aos clientes".</strong></em> </P>
+<p>Oferecemos profissionais experientese antenados às mudanças do mundo da moda.O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes </p>
 </body>
 </html>
