--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>Barbearia Alura
+    <title>Barbearia Alura</title>
+    <link rel="stylesheet"href="style.css"
 </head>
 <body>
     <h1>Sobre a Barbearia Alura</h1>
