--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet"href="style.css"
 </head>
 <body>
+    <img id="banner"src="banner.jpg">
     <h1>Sobre a Barbearia Alura</h1>
     <p>Localização no coração da cidade <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundado em 2019,a barbearia  Alura já é  destaque na cidade e conquista novos clientes a cada dia.</p>
 <P><em>"Nossa Missão é: <strong>Proporcionar auto-estima e qualidade de vida aos clientes".</strong></em> </P>
