--- a/index.html
+++ b/index.html
@@ -8,10 +8,22 @@
 </head>
 <body>
     <img id="banner"src="banner.jpg">
+    <div class="principal">
     <h1>Sobre a Barbearia Alura</h1>
     <p>Localização no coração da cidade <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundado em 2019,a barbearia  Alura já é  destaque na cidade e conquista novos clientes a cada dia.</p>
-<P><em>"Nossa Missão é: <strong>Proporcionar auto-estima e qualidade de vida aos clientes".</strong></em> </P>
-<p>Oferecemos profissionais experientese antenados às mudanças do mundo da moda.O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes </p>
+    <P><em>"Nossa Missão é: <strong>Proporcionar auto-estima e qualidade de vida aos clientes".</strong></em> </P>
+    <p>Oferecemos profissionais experientese antenados às mudanças do mundo da moda.O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes </p>
+    </div>
+<div class="beneficios"</body>
+    <h2>Benefícios</h2>
+
+    <ul>
+        <li class="itens">Atendimentos aos clientes</li>
+        <li class="itens">Espaço diferençiado</li>
+        <li class="itens">Localização</li>
+        <li class="itens">Profissionais Qualificados</li>
+    </ul>
+</div> 
 </body>
 </html>
- cc
+ 
